--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/oclazyload/dist/oclazyload.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="ng/main.index.js"></script>
 </head>
 
