--- a/public/ng/directives/sidebar/sidebar.tmpl.html
+++ b/public/ng/directives/sidebar/sidebar.tmpl.html
@@ -20,6 +20,12 @@
                             <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true"  style="color:white"></span>
                     USER PLAN</a>
             </li>
+
+            <li ui-sref-active="custom-active">
+                <a href="javascript:void(0)" ng-click="logout()">
+                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true"  style="color:white"></span>
+                LOGOUT</a>
+        </li>
         </ul>
     </div>
 </div>
