--- a/public/ng/directives/login_02/login02.tmpl.html
+++ b/public/ng/directives/login_02/login02.tmpl.html
@@ -1,4 +1,13 @@
-<div id="login02-main-container">
-
-    <h1>Login </h1>
+<div class="login02-main-container">
+    <div class="login02-login-box">
+        <h1>Login </h1>
+        <div class="txtbox">
+            <i class="fa fa-user"></i>
+            <input type="text" name="firstname">
+        </div>
+        <div class="txtbox">
+            <i class="fa fa-key"></i>
+            <input type="password" name="firstname">
+        </div>
+    </div>
 </div>
