--- a/public/ng/directives/login/login.tmpl.html
+++ b/public/ng/directives/login/login.tmpl.html
@@ -1,26 +1,13 @@
-
-    <div id='dim_wrapper' style='width:100%; height:100%; background:#000; z-index:10'>
-        <div id="login-main-container">
-              
-
-            <div class="login-box-contrainer">
-                <img src="../../../images/avatar.png" class="image-avatar">
-
-                <form role="form" novalidate>
-
-                    <input type="text" name="username" ng-model="username" placeholder="Enter Your Username">
-                    <br>
-                    <br>
-
-                    <input type="password" name="password" ng-model="password" placeholder="Enter Your Password">
-                    <br>
-                    <br>
-                    <input type="submit" name="submit" value="Login" ng-click="login(username,password)">
-
-                    <!-- <a href="#">Forget Your Password</a> -->
-
-                </form>
-            </div>
-
+<div class="login-main-container">
+    <div class="login-login-box">
+        <h1>Login </h1>
+        <div class="txtbox">
+            <i class="fa fa-user"></i>
+            <input type="text" name="" value="" ng-model="username">
+        </div>
+        <div class="txtbox">
+            <i class="fa fa-key"></i>
+            <input type="password" name="" value="" ng-model="password">
         </div>
     </div>
+</div>
