--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheets/main.style.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/bootstrap.min.css">
     <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css'/>
-    <link rel='stylesheet' href='bower_components/components-font-awesome/css/fontawesome.css' />
+    <!-- <link rel='stylesheet' href='bower_components/components-font-awesome/css/fontawesome.css' /> -->
 
 
     <script src="bower_components/angular/angular.min.js"></script>
