--- a/public/ng/directives/login/login.tmpl.html
+++ b/public/ng/directives/login/login.tmpl.html
@@ -9,5 +9,8 @@
             <i class="fa fa-key"></i>
             <input type="password" name="" value="" ng-model="password">
         </div>
+
+        <input type="submit" value="Sign In" ng-click="login(username,password)">
+
     </div>
 </div>
