--- a/public/ng/directives/login/login.tmpl.html
+++ b/public/ng/directives/login/login.tmpl.html
@@ -1,6 +1,7 @@
 <div class="login-main-container">
     <div class="login-login-box">
-        <h1>Login </h1>
+        <img src="../../../images/avatar.png" alt="no image found" class="avatar">
+        <!-- <h1>Login </h1> -->
         <div class="txtbox">
             <i class="fa fa-user"></i>
             <input type="text" name="" value="" ng-model="username">
@@ -9,8 +10,6 @@
             <i class="fa fa-key"></i>
             <input type="password" name="" value="" ng-model="password">
         </div>
-
         <input type="submit" value="Sign In" ng-click="login(username,password)">
-
     </div>
 </div>
