--- a/public/ng/directives/sidebar/sidebar.tmpl.html
+++ b/public/ng/directives/sidebar/sidebar.tmpl.html
@@ -1,31 +1,32 @@
 <div>
-    <div class="main-sidebar">
+        <section id="main-sidebar">
 
-        <ul>
-            <li ui-sref-active="custom-active">
-                    <a ui-sref="home.dashoard">
-                            <span class="fa fa-user-circle-o fa-fw fa-1x" style="color:white" aria-hidden="true"></span>
-                    DASH BOARD</a>
-            </li>
-            </li>
+                <ul>
+                        <li ui-sref-active="custom-active">
+                                <a ui-sref="home.dashoard">
+                                        <span class="fa fa-user-circle-o fa-fw fa-1x" style="color:white" aria-hidden="true"></span>
+                                        DASH BOARD</a>
+                        </li>
+                        
 
-            <li ui-sref-active="custom-active">
-                <a ui-sref="home.user">
-                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true"  style="color:white"></span>
-                    USER</a>
-            </li>
+                        <li ui-sref-active="custom-active">
+                                <a ui-sref="home.user">
+                                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true" style="color:white"></span>
+                                        USER</a>
+                        </li>
 
-            <li ui-sref-active="custom-active">
-                    <a ui-sref="home.plan">
-                            <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true"  style="color:white"></span>
-                    USER PLAN</a>
-            </li>
+                        <li ui-sref-active="custom-active">
+                                <a ui-sref="home.plan">
+                                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true" style="color:white"></span>
+                                        USER PLAN</a>
+                        </li>
 
-            <li ui-sref-active="custom-active">
-                <a href="javascript:void(0)" ng-click="logout()">
-                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true"  style="color:white"></span>
-                LOGOUT</a>
-        </li>
-        </ul>
-    </div>
+                        <li ui-sref-active="custom-active">
+                                <a href="javascript:void(0)" ng-click="logout()">
+                                        <span class="fa fa-user-circle-o fa-fw fa-1x" aria-hidden="true" style="color:white"></span>
+                                        LOGOUT</a>
+                        </li>
+                </ul>
+
+        </section>
 </div>
