--- a/public/ng/directives/home/home.tmpl.html
+++ b/public/ng/directives/home/home.tmpl.html
@@ -1,5 +1,5 @@
 <div id="main-page-wrapper">
-    <header></header>
+    <main-header></main-header>
     <div id="page-wrapper-content">
         <ui-view></ui-view>
 
