--- a/public/ng/directives/header/header.tmpl.html
+++ b/public/ng/directives/header/header.tmpl.html
@@ -1,9 +1,22 @@
 <div>
-    <div class="main-header">
-    
+    <header>
+        <div class="search-area">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" name="" value="">
+        </div>
 
-
-
-        <sidebar></sidebar>
-    </div>
+        <div class="user-area">
+            <a href="#">+ add</a>
+            <a href="#">+ add</a>
+            <a href="#"> <i class="fa fa-bell" aria-hidden="true"></i>
+                <span>3</span>
+            </a>
+            <a href="#">
+                <div class="user-img">
+                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </div>
+            </a>
+        </div>
+    </header>
+    <sidebar></sidebar>
 </div>
