--- a/public/ng/directives/home/home.tmpl.html
+++ b/public/ng/directives/home/home.tmpl.html
@@ -1,4 +1,4 @@
-<div id="main-page-wrapper">
+<div class="main-page-wrapper">
     <main-header></main-header>
     <div id="page-wrapper-content">
         <ui-view></ui-view>
