--- a/public/ng/directives/header/header.tmpl.html
+++ b/public/ng/directives/header/header.tmpl.html
@@ -2,14 +2,14 @@
     <header>
         <div class="search-area">
                 <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="text" name="" value="">
+                 <input type="text" name="" value="">
         </div>
 
         <div class="user-area">
             <a href="#">+ add</a>
-            <a href="#">+ add</a>
-            <a href="#"> <i class="fa fa-bell" aria-hidden="true"></i>
-                <span>3</span>
+            <a href="#" class="notification"> 
+                <i class="fa fa-bell" aria-hidden="true"></i>
+                <span class="circle">3</span>
             </a>
             <a href="#">
                 <div class="user-img">
