--- a/public/ng/directives/home/home.tmpl.html
+++ b/public/ng/directives/home/home.tmpl.html
@@ -1,6 +1,6 @@
 <div class="main-page-wrapper">
     <main-header></main-header>
-    <div id="page-wrapper-content">
+    <div class="page-wrapper-content">
         <ui-view></ui-view>
 
     </div>
