--- a/public/ng/directives/User/user.tmpl.html
+++ b/public/ng/directives/User/user.tmpl.html
@@ -1,3 +1,6 @@
 <div>
         <h1>User</h1>
+        <form name="userForm" role="form">
+                <input name="username" ng-model="username" required my-directive>
+        </form>
 </div>
