--- a/public/ng/directives/User/user.tmpl.html
+++ b/public/ng/directives/User/user.tmpl.html
@@ -2,5 +2,6 @@
         <h1>User</h1>
         <form name="userForm" role="form">
                 <input name="username" ng-model="username" required my-directive>
+                <h1>{{userForm.username.$valid}}</h1>
         </form>
 </div>
