--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div ng-app="BTAPP">
+    <div ng-app="btApp">
         <ui-view>
             <i>Loading ....</i>
         </ui-view>
